examples/neg/parsing/numbers.effekt
def main() =
  println(2147483648)

